--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
-    "http-server": "^14.0.0"
+    "http-server": "^14.0.0",
+    "mongodb": "^4.2.0"
   },
   "devDependencies": {},
   "scripts": {
