--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-server": "^14.0.0",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
